# mockit-rs

./: Cargo.toml  README.md
src/: lib.rs  read.rs
